--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+0. Неправильно считает угол (редко)
+0. Расчет начальной точки
+0. Таргет при старте
+0.Бег рывками
+00. Интерфейс
 1. Циклы вайл
 2. Друг\враг
 3. Инициализации хп у таргета
