--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 0. Неправильно считает угол (редко)
 0. Расчет начальной точки
 0. Таргет при старте
-0.Бег рывками
+0. Прыгает (после кила)
+0. Бегает по кругу при лутании
 00. Интерфейс
 1. Циклы вайл
 2. Друг\враг
