--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
-0. Неправильно считает угол (редко)
-0. Расчет начальной точки
 0. Таргет при старте
+0. Поворот при застревании
+0. Пробежка при имуне моба
 0. Прыгает (после кила)
 0. Бегает по кругу при лутании
-00. Интерфейс
+
+00. Метод таба
+00. Статистика убитых мобов
+
 1. Циклы вайл
 2. Друг\враг
-3. Инициализации хп у таргета
-4. Указатели маны
-5. Глобальные переменные
+3. Указатели маны
+4. Глобальные переменные
 
 7c - 4096 - животные 0 - остальные, обнуляется при агре
 21с - 115 - нпц 103-105 - враги
