--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 0. Поворот при застревании
 0. Пробежка при имуне моба
 0. Прыгает (после кила)
-0. Бегает по кругу при лутании
+0. Двойные функция мув и турн
 
 00. Метод таба
 00. Статистика убитых мобов
