--- a/TODO
+++ b/TODO
@@ -1,16 +1,14 @@
-0. Таргет при старте
+1. Циклы вайл
+0. Поворот на заданый улол
 0. Поворот при застревании
 0. Пробежка при имуне моба
-0. Прыгает (после кила)
-0. Двойные функция мув и турн
-
-00. Метод таба
-00. Статистика убитых мобов
-
-1. Циклы вайл
 2. Друг\враг
-3. Указатели маны
-4. Глобальные переменные
+3. Указатели на мобов
+4. Указатели маны
+0. Таргет при старте
+
+00. Статистика убитых мобов
+00. Бег по вейпоинтам из файла
 
 7c - 4096 - животные 0 - остальные, обнуляется при агре
 21с - 115 - нпц 103-105 - враги
