--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-1. Циклы вайл
+1. Фунция высасывания хп
+2.Таб
+3.Ротация
+4. Глобальные координаты
 0. Поворот на заданый улол
 0. Поворот при застревании
 0. Пробежка при имуне моба
