--- a/TODO
+++ b/TODO
@@ -1,14 +1,13 @@
-1. Фунция высасывания хп
-2.Таб
-3.Ротация
 4. Глобальные координаты
+3. КД скиллов на таймере
+4. Турнинг баг перед лутом
+5. Остановка бота
+6. Если табнул на бегу
 0. Поворот на заданый улол
 0. Поворот при застревании
 0. Пробежка при имуне моба
 2. Друг\враг
 3. Указатели на мобов
-4. Указатели маны
-0. Таргет при старте
 
 00. Статистика убитых мобов
 00. Бег по вейпоинтам из файла
