--- a/TODO
+++ b/TODO
@@ -1,16 +1,9 @@
-4. Глобальные координаты
-3. КД скиллов на таймере
-4. Турнинг баг перед лутом
-5. Остановка бота
-6. Если табнул на бегу
-0. Поворот на заданый улол
-0. Поворот при застревании
-0. Пробежка при имуне моба
+1. Смерть персонажа
 2. Друг\враг
 3. Указатели на мобов
 
-00. Статистика убитых мобов
-00. Бег по вейпоинтам из файла
+01. Статистика убитых мобов
+02. Бег по вейпоинтам из файла
 
 7c - 4096 - животные 0 - остальные, обнуляется при агре
 21с - 115 - нпц 103-105 - враги
