--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 1. Смерть персонажа
 2. Друг\враг
 3. Указатели на мобов
+4. Таб в свернутое окно
 
 01. Статистика убитых мобов
 02. Бег по вейпоинтам из файла
-
-7c - 4096 - животные 0 - остальные, обнуляется при агре
-21с - 115 - нпц 103-105 - враги
